# radixdlt-ledger-app

./: .gitignore  ACKNOWLEDGEMENTS.md  APDUSPEC.md  CMakeLists.txt  Makefile  ParseAtomPseudoCode.swift  README.md  RadixLedgerAppSignAtomPseudo.swift  SETUP.md  SIGN_ATOM.md  TEST.md  crypt_encrypt_test.py  ecies_decrypt_test.py  send_chunks_to_ledger.py  sign_example_atom.py
app/: Makefile
app/src/: AtomBytesWindow.c  AtomBytesWindow.h  ByteInterval.c  ByteInterval.h  ParticleField.c  ParticleField.h  ParticleFieldType.c  ParticleFieldType.h  ParticleMetaData.c  ParticleMetaData.h  ParticlesCounter.c  Transfer.h  apdu_constants.h  base_conversion.c  base_conversion.h  bip32.c  bip32.h  coin.h  common_macros.h  deserialize_DER_signature.c  deserialize_DER_signature.h  dson.c  dson.h  ecdsa_sign.c  encryptOrDecryptData.c  generateRadixAddress.c  getPublicKey.c  getPublicKey.h  getVersion.c  getVersion.h  global_state.c  main.c  (+19 more)
docs/: APDUSPEC.md
vectors/: 07.json  10.json  12.json  data_multiple_transfers_small_amounts_with_change_unique.json  data_multiple_transfers_small_and_big_amount_messages.json  data_no_transfer_burn_action.json  data_no_transfer_message_action.json  data_no_transfer_put_unique_action.json  data_single_transfer_huge_amount_no_change.json  data_single_transfer_huge_amount_with_change.json  data_single_transfer_no_change_small_amount_unique_and_message.json  data_single_transfer_small_amount_no_change.json  data_single_transfer_small_amount_with_change.json  no_data_single_transfer_huge_amount_no_change.json  no_data_single_transfer_huge_amount_with_change.json  no_data_single_transfer_small_amount_no_change.json  no_data_single_transfer_small_amount_with_change.json
(+163 files in other folders)
